Sun Aug 11 00:20:16 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_lib_objects): Changed interface.  Now
	generates _DEPENDENCIES variable if appropriate.

	* Makefile.am (CLEANFILES): Removed.

	* automake.in (handle_configure): Define CONFIG_CLEAN_FILES.

	* clean.am (clean-generic): Remove $(CONFIG_CLEAN_FILES).

	* compile-vars.am (CC, CFLAGS, COMPILE, LINK): Removed.

	* automake.in (handle_yacc_lex_cxx): Require ylwrap in
	multi-lex/yacc case.
	(handle_source_transform): Changed return result.
	(handle_programs): Use linker returned by
	handle_source_transform.
	(seen_prog_cc, seen_prog_cxx): New globals.
	(scan_configure): Recognize AC_PROG_CC and AC_PROG_CXX.
	(handle_yacc_lex_cxx): Error message if AC_PROG_CXX or
	AC_PROG_YACC missing.
	(seen_decl_yytext, seen_prog_lex): New globals.
	(scan_configure): Set them.
	(handle_yacc_lex_cxx): Warn about missing AC_PROG_LEX or
	AC_DECL_YYTEXT.
	(handle_yacc_lex_cxx): Use $(LEX_OUTPUT_ROOT).
	(initialize_per_input): Initialize seen_c_source.
	(handle_yacc_lex_cxx): Define CC, CFLAGS, COMPILE, LINK only when
	C source seen.
	(handle_source_transform): Set seen_c_source.

	* interlock: Changed usage.

	* ylwrap: New file.

	* automake.in (handle_yacc_lex_cxx): Renamed.

	* automake.in (handle_dependencies): Handle %cxx_extensions.
	Include depend2.am when appropriate.

	* depend2.am: New file; contents from depend.am but templatized.

	* automake.in (initialize_per_input): Initialize
	%cxx_extensions.
	(handle_source_transform): Set %cxx_extensions.

Sat Aug 10 10:29:30 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* interlock: New file.

	* automake.in (handle_yacc_lex): New sub.
	(handle_source_transform): Removed most yacc/lex handling.
	(initialize_per_input): Init yacc_sources, lex_sources.
	(generate_makefile): Run handle_yacc_lex.
	(handle_merge_targets): Use `scalar' and not $# to find length of
	array.

	* m4/AM_FEATURE_EXIT.m4: Wrote.
	* m4/AM_FEATURE_CTYPE.m4: Wrote.