@@ -47,12 +47,12 @@ $verbosity = 0;
      'fp_WITH_REGEX',
      'gm_PROG_LIBTOOL',
      'jm_MAINTAINER_MODE',
+     'md_TYPE_PTRDIFF_T',
+     'ud_PATH_LISPDIR',
 # These aren't quite obsolete.
 #      'md_PATH_PROG',
-#      'md_TYPE_PTRDIFF_T',
 #      'ud_GNU_GETTEXT',
 #      'ud_LC_MESSAGES',
-#      'ud_PATH_LISPDIR',
 #      'ud_WITH_NLS'
      );
 
