@@ -171,7 +171,7 @@ $seen_maint_mode = 0;
 $seen_package = 0;
 $seen_version = 0;
 
-# TRUE if we've seen ud_PATH_LISPDIR.
+# TRUE if we've seen AM_PATH_LISPDIR.
 $seen_lispdir = 0;
 
 
@@ -2399,7 +2399,7 @@ sub handle_emacs_lisp
 	if (&variable_defined ('lisp_LISP'))
 	{
 	    $varname = 'lisp_LISP';
-	    &am_error ("\`lisp_LISP' defined but \`ud_PATH_LISPDIR' not in \`configure.in'")
+	    &am_error ("\`lisp_LISP' defined but \`AM_PATH_LISPDIR' not in \`configure.in'")
 		if ! $seen_lispdir;
 	}
 	else
@@ -2596,7 +2596,7 @@ sub scan_configure
 	$seen_prog_install = 1 if ! $seen_prog_install && /AC_PROG_INSTALL/;
 	$seen_prog_install = 2 if /AM_PROG_INSTALL/;
 
-        $seen_lispdir = 1 if /ud_PATH_LISPDIR/;
+        $seen_lispdir = 1 if /AM_PATH_LISPDIR/;
 
         if (/AM_PROG_LIBTOOL/)
 	{
