@@ -5,8 +5,7 @@ MAINT_CHARSET = latin1
 
 pkgdata_DATA = AM_C_PROTOTYPES.m4 AM_FEATURE_CTYPE.m4 \
 AM_FEATURE_ERRNO.m4 AM_FEATURE_EXIT.m4 AM_FUNC_FNMATCH.m4 \
-AM_GNU_GETTEXT.m4 AM_LC_MESSAGES.m4 AM_MAINTAINER_MODE.m4 \
-AM_PATH_LISPDIR.m4 AM_PROG_CC_STDC.m4 AM_PROG_INSTALL.m4 \
-AM_PROG_LIBTOOL.m4 AM_SYSTEM_HEADER.m4 AM_TYPE_PTRDIFF_T.m4 \
-AM_WITH_DMALLOC.m4 AM_WITH_NLS.m4 AM_WITH_REGEX.m4 AM_FUNC_STRTOD.m4 \
-AM_INIT_AUTOMAKE.m4
+AM_MAINTAINER_MODE.m4 AM_PATH_LISPDIR.m4 AM_PROG_CC_STDC.m4 \
+AM_PROG_INSTALL.m4 AM_PROG_LIBTOOL.m4 AM_SYSTEM_HEADER.m4 \
+AM_TYPE_PTRDIFF_T.m4 AM_WITH_DMALLOC.m4 AM_WITH_REGEX.m4 \
+AM_FUNC_STRTOD.m4 AM_INIT_AUTOMAKE.m4
