@@ -1,7 +1,15 @@
 Sun Aug 11 00:20:16 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* aclocal.in (obsolete_macros): md_TYPE_PTRDIFF_T and
+	ud_PATH_LISPDIR are obsolete names.
+
+	* m4/AM_LC_MESSAGES.m4, m4/AM_WITH_NLS.m4, m4/AM_GNU_GETTEXT.m4:
+	Removed.
+
 	* automake.in (handle_lib_objects): Changed interface.  Now
 	generates _DEPENDENCIES variable if appropriate.
+	(handle_emacs_lisp): Use AM_PATH_LISPDIR.
+	(scan_configure): Ditto.
 
 	* Makefile.am (CLEANFILES): Removed.
 
